# cgj-engine

./: CMakeLists.txt  README.md
include/CGJ/: Constants.h  Graphics.h  Maths.h
include/CGJ/Graphics/: FPSCamera.h  ICamera.h  Model.h  ShaderProgram.h  SphericalCamera.h
include/CGJ/Maths/: Frustum.h  MatrixFactory.h  Quaternion.h  mathf.h  matrix2.h  matrix3.h  matrix4.h  vector2.h  vector3.h  vector4.h
include/CGJ/Physics/: AABB.h
include/CGJ/Utils/: Array2D.h
src/CGJ/: Maths.h  main.cpp
src/CGJ/Graphics/: FPSCamera.cpp  ICamera.cpp  Model.cpp  SphericalCamera.cpp
src/CGJ/Maths/: Frustum.cpp  MatrixFactory.cpp  Quaternion.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/CGJ/Tests/: FactoryTests.cpp  Matrix2Tests.cpp  Matrix3Tests.cpp  Matrix4Tests.cpp  QuaternionTests.cpp  vector2Tests.cpp  vector3Tests.cpp  vector4Tests.cpp
src/CGJ/Utils/: Random.cpp
